--- a/package.json
+++ b/package.json
@@ -28,19 +28,8 @@
   ],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@stripe/react-stripe-js": "^1.15.0",
-    "@stripe/stripe-js": "^1.44.1",
-    "react-router-dom": "^6.4.3"
-  },
-  "peerDependencies": {
-    "@stripe/react-stripe-js": ">=1.7.0",
-    "@stripe/stripe-js": ">=1.22.1"
-  },
   "devDependencies": {
-    "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9"
+    "@types/react": "^18.0.25"
   }
 }
