--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@react-providers/cart",
-  "version": "1.3.13",
+  "version": "1.3.14",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "directories": {
     "example": "examples",
-    "test": "test",
-    "publish": "npm publish --access=public"
+    "test": "test"
   },
   "scripts": {
     "check": "tsc -p tsconfig.json --noEmit true",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pb": "yarn build && yarn publish --access=public"
   },
   "repository": {
     "type": "git",
